Look, most mobile apps just terrible

--- a/_posts/2015-06-12-espn-ios.md
+++ b/_posts/2015-06-12-espn-ios.md
@@ -9,7 +9,7 @@ Occasionally, I analyze mobile apps to understand what is really going on behind
 
 ![Snippet of HTTP and HTTPS traffic from ESPN iOS app on mitmproxy](/images/mitmproxy-espn.png)
 
-With all HTTP and HTTPS traffic from my iPhone going to my laptop that has `mitmproxy` running, I opened the ESPN app on my iPhone.  Between 04:19:58 GMT and 04:20:44 GMT on Wednesday, June 10th (that is less than a minute), the ESPN app made 90 requests.  See list all requests made by the ESPN iOS app below (incomplete URIs); requests that have an asterisk are ad-related, Facebook included.  So what kind of requests were made?  Some for static content from ESPN's content delivery network, some for app analytics, and many were ad related.  Of the 90 requests, 60 were ad related.  That's ~66% of all requests when you just open up the app.  This was enough for me to delete the ESPN iOS app from my phone.
+With all HTTP and HTTPS traffic from my iPhone going to my laptop that has `mitmproxy` running, I opened the ESPN app on my iPhone.  Between 04:19:58 GMT and 04:20:44 GMT on Wednesday, June 10th (that is less than a minute), the ESPN app made 90 requests.  See list all requests made by the ESPN iOS app below (incomplete URIs); requests that have an asterisk are ad-related, Facebook included.  So what kind of requests were made?  Some for static content from ESPN's content delivery network, some for app analytics, and many were ad related.  Of the 90 requests, 60 were ad related.  That's ~66% of all requests when you just open up the app.  Most mobile apps are just as bad, especially the freemiums.  This was enough for me to delete the ESPN iOS app from my phone.
 
 I posted the flow of all HTTP and HTTPS traffic from the ESPN iOS app for your analysis and interest: [`espn-ios.flow`](/docs/espn-ios.flow).  This file has all the requests including complete URIs, HTTP and HTTPS requests and responses.  You can open the file from `mitmproxy`.
 
